--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -105,6 +105,7 @@ const page_elements = document.getElementsByClassName("page-link");
 Array.from(page_elements).forEach(function(element) {
     element.addEventListener('click', function() {
         document.getElementById('page').value = this.dataset.page;
+        document.getElementById('answerPage').value = this.dataset.answerPage;
         document.getElementById('searchForm').submit();
     });
 });
