--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -48,7 +48,7 @@
     <h5 class="border-bottom my-3 py-2">
         {{question.answer_set.count}}개의 답변이 있습니다.
     </h5>
-    {% for answer in question.answer_set.all %}
+    {% for answer in answer_page %}
     <a id="answer_{{ answer.id }}"></a>
     <div class="card my-3">
         <div class="card-body">
@@ -87,41 +87,37 @@
         <!-- 이전페이지 -->
         {% if answer_page.has_previous %}
         <li class="page-item">
-            {% comment %} <a class="page-link" href="?page={{ question_list.previous_page_number }}">이전</a> {% endcomment %}
-            <a class="page-link" data-page="{{ question.id }}" data-answerPage="{{ answer_page.previous_page_number }}"
-            href="javascript:void(0)">이전</a>
+            {% comment %} <a class="page-link answer-link" href="?page={{ question_list.previous_page_number }}">이전</a> {% endcomment %}
+            <a class="page-link answer-link" href="?page={{ question.id }}&answerPage={{ answer_page.previous_page_number }}">이전</a>
         </li>
         {% else %}
         <li class="page-item disabled">
-            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+            <a class="page-link answer-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
         </li>
         {% endif %}
         <!-- 페이지리스트 -->
         {% for page_number in answer_page.paginator.page_range %}
             {% if page_number == answer_page.number %}
                 <li class="page-item active" aria-current="page">
-                    {% comment %} <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a> {% endcomment %}
-                    <a class="page-link" data-page="{{  question.id }}" data-answerPage="{{ answer_page.number }}"
-                    href="javascript:void(0)">{{ answer_page.number  }}</a>
+                    {% comment %} <a class="page-link answer-link" href="?page={{ page_number }}">{{ page_number }}</a> {% endcomment %}
+                    <a class="page-link answer-link" href="?page={{ question.id }}&answerPage={{ page_number }}">{{ page_number  }}</a>
                 </li>
                 {% else %}
                     <li class="page-item">
-                        {% comment %} <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a> {% endcomment %}
-                        <a class="page-link" data-page="{{ page_number }}" data-answerPage="{{ answer_page.number }}"
-                    href="javascript:void(0)">{{ answer_page.number  }}</a>
+                        {% comment %} <a class="page-link answer-link" href="?page={{ page_number }}">{{ page_number }}</a> {% endcomment %}
+                        <a class="page-link answer-link" href="?page={{ question.id }}&answerPage={{ page_number }}">{{ page_number }}</a>
                     </li>
             {% endif %}
         {% endfor %}
         <!-- 다음페이지 -->
         {% if answer_page.has_next %}
             <li class="page-item">
-                {% comment %} <a class="page-link" href="?page={{ question_list.next_page_number }}">다음</a> {% endcomment %}
-                <a class="page-link" data-page="{{ question.id }}" data-answerPage="{{ answer_page.next_page_number }}"
-            href="javascript:void(0)">다음</a>
+                {% comment %} <a class="page-link answer-link" href="?page={{ question_list.next_page_number }}">다음</a> {% endcomment %}
+                <a class="page-link answer-link" href="?page={{ question.id }}&answerPage={{ answer_page.next_page_number }}">다음</a>
         </li>
         {% else %}
             <li class="page-item disabled">
-                <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+                <a class="page-link answer-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
             </li>
         {% endif %}
     </ul>
