--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -55,40 +55,42 @@
         {% if question_list.has_previous %}
         <li class="page-item">
             {% comment %} <a class="page-link" href="?page={{ question_list.previous_page_number }}">이전</a> {% endcomment %}
-            <a class="page-link" data-page="{{ question_list.previous_page_number }}"
+            <a class="page-link page-pagination" data-page="{{ question_list.previous_page_number }}"
             href="javascript:void(0)">이전</a>
         </li>
         {% else %}
         <li class="page-item disabled">
-            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+            <a class="page-link page-pagination" tabindex="-1" aria-disabled="true" href="#">이전</a>
         </li>
         {% endif %}
         <!-- 페이지리스트 -->
         {% for page_number in question_list.paginator.page_range %}
+        {% if page_number >= question_list.number|add:-5 and page_number <= question_list.number|add:5 %}
         {% if page_number == question_list.number %}
         <li class="page-item active" aria-current="page">
-            {% comment %} <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a> {% endcomment %}
-            <a class="page-link" data-page="{{ page_number }}"
+            {% comment %} <a class="page-link page-pagination" href="?page={{ page_number }}">{{ page_number }}</a> {% endcomment %}
+            <a class="page-link page-pagination" data-page="{{ page_number }}"
             href="javascript:void(0)">{{ page_number }}</a>
         </li>
         {% else %}
         <li class="page-item">
-            {% comment %} <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a> {% endcomment %}
-            <a class="page-link" data-page="{{ page_number }}"
+            {% comment %} <a class="page-link page-pagination" href="?page={{ page_number }}">{{ page_number }}</a> {% endcomment %}
+            <a class="page-link page-pagination" data-page="{{ page_number }}"
            href="javascript:void(0)">{{ page_number }}</a>
         </li>
+        {% endif %}
         {% endif %}
         {% endfor %}
         <!-- 다음페이지 -->
         {% if question_list.has_next %}
         <li class="page-item">
-            {% comment %} <a class="page-link" href="?page={{ question_list.next_page_number }}">다음</a> {% endcomment %}
-            <a class="page-link" data-page="{{ question_list.next_page_number }}"
+            {% comment %} <a class="page-link page-pagination" href="?page={{ question_list.next_page_number }}">다음</a> {% endcomment %}
+            <a class="page-link page-pagination" data-page="{{ question_list.next_page_number }}"
            href="javascript:void(0)">다음</a>
         </li>
         {% else %}
         <li class="page-item disabled">
-            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+            <a class="page-link page-pagination" tabindex="-1" aria-disabled="true" href="#">다음</a>
         </li>
         {% endif %}
     </ul>
@@ -101,7 +103,7 @@
 {% endblock %}
 {% block script %}
 <script type='text/javascript'>
-const page_elements = document.getElementsByClassName("page-link");
+const page_elements = document.getElementsByClassName("page-link page-pagination");
 Array.from(page_elements).forEach(function(element) {
     element.addEventListener('click', function() {
         document.getElementById('page').value = this.dataset.page;
