--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -158,6 +158,7 @@
 {% block script %}
 <script type='text/javascript'>
 const delete_elements = document.getElementsByClassName("delete");
+console.log(delete_elements);
 Array.from(delete_elements).forEach(function(element) {
     element.addEventListener('click', function() {
         if(confirm("정말로 삭제하시겠습니까?")) {
@@ -166,11 +167,12 @@ Array.from(delete_elements).forEach(function(element) {
     });
 });
 const recommend_elements = document.getElementsByClassName("recommend");
+console.log(recommend_elements);
 Array.from(recommend_elements).forEach(function(element) {
+    console.log(element);
     element.addEventListener('click', function() {
-        if(confirm("정말로 추천하시겠습니까?")) {
-            location.href = this.dataset.uri;
-        };
+        location.href = this.dataset.uri;
     });
 });
+</script>
 {% endblock %}
